Added basic code from https://github.com/robdmoore/TestFixtureDataGenerationPresentation

--- a/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
+++ b/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
@@ -30,6 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Castle.Core">
+      <HintPath>..\packages\Castle.Core.3.3.1\lib\net45\Castle.Core.dll</HintPath>
+    </Reference>
+    <Reference Include="NSubstitute">
+      <HintPath>..\packages\NSubstitute.1.8.1.0\lib\net45\NSubstitute.dll</HintPath>
+    </Reference>
+    <Reference Include="nunit.framework">
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+    </Reference>
+    <Reference Include="Ploeh.AutoFixture">
+      <HintPath>..\packages\AutoFixture.3.20.0\lib\net40\Ploeh.AutoFixture.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -37,9 +49,25 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="TestStack.Dossier">
+      <HintPath>..\packages\TestStack.Dossier.3.1.0\lib\NET40\TestStack.Dossier.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="00_NoPatterns\DemographicTests.cs" />
+    <Compile Include="00_NoPatterns\GetProductsForMemberTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestHelpers\InMemorySession.cs" />
+    <Compile Include="TestHelpers\QueryTestBase.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\TestingPatternsWithDossier\TestingPatternsWithDossier.csproj">
+      <Project>{a8ebb0cf-77d2-4e22-8a22-8d1551800f02}</Project>
+      <Name>TestingPatternsWithDossier</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
