--- a/TestingPatternsWithDossier.Tests/packages.config
+++ b/TestingPatternsWithDossier.Tests/packages.config
@@ -3,6 +3,6 @@
   <package id="AutoFixture" version="3.20.0" targetFramework="net45" />
   <package id="Castle.Core" version="3.3.1" targetFramework="net45" />
   <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" />
-  <package id="TestStack.Dossier" version="3.0.0" targetFramework="net45" />
-  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="TestStack.Dossier" version="3.1.0" targetFramework="net45" />
 </packages>
