--- a/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
+++ b/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
@@ -56,6 +56,11 @@
   <ItemGroup>
     <Compile Include="00_NoPatterns\DemographicTests.cs" />
     <Compile Include="00_NoPatterns\GetProductsForMemberTests.cs" />
+    <Compile Include="01_ObjectMother\DemographicTests.cs" />
+    <Compile Include="01_ObjectMother\GetProductsForMemberTests.cs" />
+    <Compile Include="01_ObjectMother\ObjectMothers\Demographics.cs" />
+    <Compile Include="01_ObjectMother\ObjectMothers\Members.cs" />
+    <Compile Include="01_ObjectMother\ObjectMothers\Products.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelpers\InMemorySession.cs" />
     <Compile Include="TestHelpers\QueryTestBase.cs" />
