--- a/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
+++ b/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
@@ -61,6 +61,12 @@
     <Compile Include="01_ObjectMother\ObjectMothers\Demographics.cs" />
     <Compile Include="01_ObjectMother\ObjectMothers\Members.cs" />
     <Compile Include="01_ObjectMother\ObjectMothers\Products.cs" />
+    <Compile Include="02_TestDataBuilder\Builders\CampaignBuilder.cs" />
+    <Compile Include="02_TestDataBuilder\Builders\DemographicBuilder.cs" />
+    <Compile Include="02_TestDataBuilder\Builders\MemberBuilder.cs" />
+    <Compile Include="02_TestDataBuilder\Builders\ProductBuilder.cs" />
+    <Compile Include="02_TestDataBuilder\DemographicTests.cs" />
+    <Compile Include="02_TestDataBuilder\GetProductsForMemberTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelpers\InMemorySession.cs" />
     <Compile Include="TestHelpers\QueryTestBase.cs" />
