--- a/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
+++ b/TestingPatternsWithDossier.Tests/TestingPatternsWithDossier.Tests.csproj
@@ -67,6 +67,15 @@
     <Compile Include="02_TestDataBuilder\Builders\ProductBuilder.cs" />
     <Compile Include="02_TestDataBuilder\DemographicTests.cs" />
     <Compile Include="02_TestDataBuilder\GetProductsForMemberTests.cs" />
+    <Compile Include="03_TestDataBuilderMother\Builders\CampaignBuilder.cs" />
+    <Compile Include="03_TestDataBuilderMother\Builders\DemographicBuilder.cs" />
+    <Compile Include="03_TestDataBuilderMother\Builders\MemberBuilder.cs" />
+    <Compile Include="03_TestDataBuilderMother\Builders\ProductBuilder.cs" />
+    <Compile Include="03_TestDataBuilderMother\DemographicTests.cs" />
+    <Compile Include="03_TestDataBuilderMother\GetProductsForMemberTests.cs" />
+    <Compile Include="03_TestDataBuilderMother\ObjectMothers\Campaigns.cs" />
+    <Compile Include="03_TestDataBuilderMother\ObjectMothers\Demographics.cs" />
+    <Compile Include="03_TestDataBuilderMother\ObjectMothers\Members.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestHelpers\InMemorySession.cs" />
     <Compile Include="TestHelpers\QueryTestBase.cs" />
