--- a/TestingPatternsWithDossier.Tests/packages.config
+++ b/TestingPatternsWithDossier.Tests/packages.config
@@ -4,5 +4,6 @@
   <package id="Castle.Core" version="3.3.1" targetFramework="net45" />
   <package id="NSubstitute" version="1.8.1.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
+  <package id="Shouldly" version="2.4.0" targetFramework="net45" />
   <package id="TestStack.Dossier" version="3.1.0" targetFramework="net45" />
 </packages>
